<resources>
    <string name="app_name">ShoppingList</string>
    <string name="button_start_shoppinglist">Manage shopping list</string>
    <string name="button_manage_recipies">Manage recipies</string>
    <string name="button_manage_categories">Manage categories</string>
    <string name="button_manage_ingredients">Manage ingredients</string>
    <string name="button_go_shopping">Go shopping</string>
    <string name="button_settings">Settings</string>
    <string name="button_add">Add</string>
    <string name="button_delete">Delete</string>
    <string name="button_search">Search</string>
    <string name="activity_ingredients">Manage ingredients</string>
    <string name="activity_categories">Manage category sort orders</string>
    <string name="activity_recipes">Manage recipes</string>
    <string name="activity_manage_shoppinglist">Manage shopping list</string>
    <string name="activity_go_shopping">Go shopping</string>
    <string name="activity_settings">Settings</string>
    <string name="text_category">Category</string>
    <string name="text_provenance">Provenance</string>
    <string name="text_numberofpersons"># Persons</string>
    <string name="text_amount">Amount</string>
    <string name="text_size">Size</string>
    <string name="text_optional">Optional</string>
    <string name="text_std_unit">Default unit</string>
    <string name="text_additionalinfo">Add. Info</string>
    <string name="button_reset">Reset</string>
    <string name="button_export">Save as</string>
    <string name="button_import">Load</string>
    <string name="button_rename">Rename</string>
    <string name="button_copy">Copy</string>
    <string name="button_switchmode">Switch mode</string>
    <string name="button_close">Close</string>
    <string name="alert_saveas">Save as</string>
    <string name="alert_load">Import file</string>
    <string name="text_data_saved">Data saved to %s</string>
    <string name="text_data_loaded">Data loaded from %s</string>
    <string name="button_add_category">Add Category</string>
    <string name="text_load_file_failed">Couldn\'t load data file.</string>
    <string name="text_save_file_failed">Couldn\'t save file.</string>
    <string name="text_delete_category_disallowed_header">Deleting category not allowed</string>
    <string name="text_delete_category_disallowed_desc">Category \"%1$s\" cannot be deleted because it is still being used by the following ingredients:\n%2$s</string>
    <string name="text_delete_ingredient_disallowed_header">Deleting ingredient not allowed</string>
    <string name="text_delete_ingredient_disallowed_desc">Ingredient \"%1$s\" cannot be deleted because it is still being used in the following items.\n\nRecipes:\n%2$s\n\nShoppinglist items:\n%3$s</string>
    <string name="text_delete_sortorder_disallowed_header">Deleting sort order not allowed</string>
    <string name="text_delete_sortorder_disallowed_desc">Sort order \"%s\" cannot be deleted because it is still being used by the following ingredients:\n%2$s</string>
    <string name="text_item_deleted">Item deleted</string>
    <string name="text_item_restored">Item restored</string>
    <string name="text_undo">Undo</string>
    <string name="text_nrpersons_listvariant">\u0020(%s Pers. [+] )</string>
    <string name="text_add_ingredient">Add ingredient</string>
    <string name="text_add_recipe">Add recipe</string>
    <string name="text_change_nrpersons">Change number of persons of recipe \"%s\"</string>
    <string name="text_recipe_deleted">Recipe deleted</string>
    <string name="text_recipe_restored">Recipe restored</string>
    <string name="text_import_recipe">Import recipe</string>
    <string name="text_all_recipes_alreay_added">Nothing to add, all recipes already added.</string>
    <string name="text_reset_shoppinglist_header">Resetting shopping list.</string>
    <string name="text_reset_shoppnglist">Resetting shopping list. Do you really want to proceed?</string>
    <string name="text_add_sortorder">Add sort order</string>
    <string name="text_sortorder_deleted">Sort order deleted</string>
    <string name="text_sortorder_restored">Sort order restored</string>
    <string name="text_default_unit">Default unit</string>
    <string name="text_default_nrpersons">Default # persons</string>
    <string name="text_default_sortorder">Default sort order</string>
    <string name="text_backend">Backend</string>
    <string name="text_clear_all_data">Clear all data</string>
    <string name="text_reset_data_to_default">Replace data with default</string>
    <string name="text_rename_sortorder">Rename sort order \"%s\"</string>
    <string name="text_sortorder_renamed">Sort order \"%1$s\" renamed to \"%2$s\".</string>
    <string name="text_rename_category">Rename category \"%s\"</string>
    <string name="text_category_renamed">Category \"%1$s\" renamed to \"%2$s\".</string>
    <string name="text_rename_ingredient">Rename ingredient \"%s\"</string>
    <string name="text_ingredient_renamed">Ingredient \"%1$s\" renamed to \"%2$s\".</string>
    <string name="text_rename_recipe">Rename recipe \"%s\"</string>
    <string name="text_copy_recipe">Copy recipe \"%s\"</string>
    <string name="text_recipe_renamed">Recipe \"%1$s\" renamed to \"%2$s\".</string>
    <string name="text_delete_recipe_header">Deleting Recipe</string>
    <string name="text_delete_recipe">Deleting recipe \"%s\". Do you really want to proceed?</string>
    <string name="text_rename_group">Rename alternatives group \"%s\"</string>
    <string name="text_group_renamed">Alternatives group \"%1$s\" renamed to \"%2$s\".</string>
    <string name="text_add_group">Add alternatives group</string>
    <string name="text_chose_from_group">Choose item from group \"%s\"</string>
    <string name="text_amount_range">Range</string>
    <string name="text_amount_min">Min.</string>
    <string name="text_amount_max">Max.</string>
    <string name="file_exists_overwrite_header">File already exists.</string>
    <string name="file_exists_overwrite">The file %s already exists. Do you want to overwrite it?</string>
    <string name="provenance_everywhere">Everywhere</string>
    <string name="text_action_reset_data">This will reset all your current data and cannot be undone. Proceed?</string>
    <string name="text_clear_all_data_header">Clear all current data</string>
    <string name="text_reset_to_default_header">Replace all data with default</string>
    <string name="text_replace_by_import_header">Importing file replaces current data</string>
    <string name="text_default_data_loaded">Loaded default data</string>
    <string name="text_backend_changed_successfully">Changed backend successfully</string>
    <string name="text_change_backend_failed">Changing backend failed</string>
    <string name="text_switch_backend_header">Switching backend</string>
    <string name="text_switch_backend">About to switch backend. All data will be copied to the new backend. Proceed?</string>
    <string name="text_all_data_cleared">All data cleared</string>
    <string name="text_header_checked_items">Collected items</string>
    <string name="text_header_unchecked_items">Uncollected items</string>

    <string name="unit_count_long">Count</string>
    <string name="unit_kilogram_long">Kilogram</string>
    <string name="unit_gram_long">Gram</string>
    <string name="unit_liter_long">Liter</string>
    <string name="unit_deciliter_long">Deciliter</string>
    <string name="unit_mililiter_long">Milliliter</string>
    <string name="unit_dessertspoon_long">Dessertspoon</string>
    <string name="unit_teaspoon_long">Teaspoon</string>
    <string name="unit_unitless_long">Dimensionless</string>

    <string name="unit_count_short">Piece</string>
    <string name="unit_kilogram_short">kg</string>
    <string name="unit_gram_short">g</string>
    <string name="unit_liter_short">L</string>
    <string name="unit_deciliter_short">dl</string>
    <string name="unit_mililiter_short">ml</string>
    <string name="unit_dessertspoon_short">ds</string>
    <string name="unit_teaspoon_short">ts</string>
    <string name="unit_unitless_short"/>

    <string name="unit_count_short_prefix"/>
    <string name="unit_kilogram_short_prefix">kg</string>
    <string name="unit_gram_short_prefix">g</string>
    <string name="unit_liter_short_prefix">L</string>
    <string name="unit_deciliter_short_prefix">dl</string>
    <string name="unit_mililiter_short_prefix">ml</string>
    <string name="unit_dessertspoon_short_prefix">ds</string>
    <string name="unit_teaspoon_short_prefix">ts</string>
    <string name="unit_unitless_short_prefix"/>

    <string name="size_small">Small</string>
    <string name="size_normal">Normal</string>
    <string name="size_large">Large</string>

    <string name="backend_fs_based">Json-File backend</string>
    <string name="backend_db_based">SQL backend</string>
</resources>
