<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.SettingsActivity">

    <TableLayout
        android:id="@+id/tableLayoutSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="32dp"
        android:clickable="true"
        android:focusable="true"
        android:paddingLeft="10dp"
        android:paddingTop="0dp"
        android:paddingRight="10dp"
        android:paddingBottom="0dp"
        android:stretchColumns="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewDefaultUnit"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginEnd="16dp"
                android:gravity="center_vertical"
                android:text="@string/text_default_unit" />

            <Spinner
                android:id="@+id/spinnerDefaultUnit"
                android:layout_width="wrap_content"
                android:layout_height="40dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textDefaultNrPersons"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginEnd="16dp"
                android:text="@string/text_default_nrpersons" />

            <EditText
                android:id="@+id/editTextDefaultNrPersons"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:inputType="number" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewDefaultSortOrder"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginEnd="16dp"
                android:gravity="center_vertical"
                android:text="@string/text_default_sortorder" />

            <Spinner
                android:id="@+id/spinnerDefaultSortOrder"
                android:layout_width="wrap_content"
                android:layout_height="40dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewBackend"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginEnd="16dp"
                android:gravity="center_vertical"
                android:text="@string/text_backend" />

            <Spinner
                android:id="@+id/spinnerBackend"
                android:layout_width="wrap_content"
                android:layout_height="40dp" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btnResetToEmpty"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="onClearAllData"
        android:text="@string/text_clear_all_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayoutSettings" />

    <Button
        android:id="@+id/btnResetToDefault"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:onClick="onResetDataToDefault"
        android:text="@string/text_reset_data_to_default"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnResetToEmpty" />

</android.support.constraint.ConstraintLayout>