<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="0dp"
    android:layout_marginRight="0dp"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayoutRecipeItemDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:gravity="center_vertical"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewDesc"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textSize="12sp"/>

        <ImageView
            android:id="@+id/button_addRecipeItem"
            android:layout_width="?listPreferredItemHeight"
            android:layout_height="match_parent"
            android:scaleType="center"
            android:contentDescription="@string/button_add"
            android:src="@drawable/ic_add_black_24dp" />

        <ImageView
            android:id="@+id/button_deleteRecipe"
            android:layout_width="?listPreferredItemHeight"
            android:layout_height="match_parent"
            android:scaleType="center"
            android:contentDescription="@string/button_delete"
            android:src="@drawable/ic_delete_black_24dp" />
    </LinearLayout>



    <TableLayout
        android:id="@+id/tableLayoutEditRecipeItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="0dp"
        android:paddingTop="0dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="0dp"
        android:clickable="true"
        android:focusable="true"
        android:stretchColumns="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewAmount"
                android:layout_width="86dp"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:text="@string/text_amount" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:padding="0dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editText_Amount"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number|numberDecimal" />

                <Spinner
                    android:id="@+id/spinnerAmount"
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewSize"
                android:layout_width="86dp"
                android:layout_height="40dp"
                android:text="@string/text_size" />

            <Spinner
                android:id="@+id/spinnerSize"
                android:layout_width="match_parent"
                android:layout_height="40dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/checkBoxOptional"
                android:layout_column="1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/text_optional" />

        </TableRow>
    </TableLayout>
</LinearLayout>