<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManageShoppingList">

    <Button
        android:id="@+id/buttonEditShoppingRecipe"
        android:layout_width="58dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:onClick="onEditShoppingRecipe"
        android:text="@string/button_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/recyclerViewShoppingRecipe"
        app:layout_constraintTop_toBottomOf="@+id/buttonDelShoppingRecipe" />

    <Button
        android:id="@+id/buttonResetShoppingList"
        android:layout_width="68dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="onResetList"
        android:text="@string/button_reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerViewShoppingRecipe"
        android:layout_width="294dp"
        android:layout_height="498dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonDelShoppingRecipe"
        android:layout_width="58dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:onClick="onDelShoppingRecipe"
        android:text="@string/button_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/recyclerViewShoppingRecipe"
        app:layout_constraintTop_toBottomOf="@+id/buttonAddShoppingRecipe" />

    <Button
        android:id="@+id/buttonAddShoppingRecipe"
        android:layout_width="60dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:onClick="onAddShoppingRecipe"
        android:text="@string/button_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toEndOf="@+id/recyclerViewShoppingRecipe"
        app:layout_constraintTop_toTopOf="@+id/recyclerViewShoppingRecipe" />

</android.support.constraint.ConstraintLayout>