<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="0dp"
    android:layout_marginRight="0dp"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:gravity="center_vertical" />

    <TableLayout
        android:id="@+id/tableLayoutEditRecipeItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="0dp"
        android:paddingTop="0dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="0dp"
        android:clickable="true"
        android:focusable="true"
        android:stretchColumns="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewAmount"
                android:layout_width="86dp"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:text="@string/text_amount" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:padding="0dp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinnerAmount"
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@+id/tableRowAmount"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewPlaceholder"
                android:layout_width="86dp"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:text="" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:padding="0dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageViewInc"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="0dp"
                    android:onClick="onDecreaseAmount"
                    android:scaleType="center"
                    android:contentDescription="@string/button_add"
                    android:src="@drawable/ic_indeterminate_check_box_black_24dp" />

                <EditText
                    android:id="@+id/editText_Amount"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="0dp"
                    android:ems="10"
                    android:inputType="number|numberDecimal" />

                <ImageView
                    android:id="@+id/imageViewDec"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="0dp"
                    android:onClick="onIncreaseAmount"
                    android:scaleType="center"
                    android:contentDescription="@string/button_add"
                    android:src="@drawable/ic_add_box_black_24dp" />

            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewSize"
                android:layout_width="86dp"
                android:layout_height="40dp"
                android:text="@string/text_size" />

            <Spinner
                android:id="@+id/spinnerSize"
                android:layout_width="match_parent"
                android:layout_height="40dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewAdditionalInfo"
                android:layout_width="86dp"
                android:layout_height="40dp"
                android:text="@string/text_additionalinfo" />

            <EditText
                android:id="@+id/editText_AdditonalInfo"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/checkBoxOptional"
                android:layout_column="1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/text_optional" />

        </TableRow>
    </TableLayout>
</LinearLayout>